--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 body {
     padding: 0;
 }
+
+#spinner-container {
+    height: 500px;
+}
+
 canvas {
     /*position: absolute;*/
     border: 1px solid black;
